Implement V2 functional converter: pattern detection, comment preservation, bidirectional transforms (#657)